# merradownload

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: merra_scraping.py
src/opendap_download/: __init__.py  cli.py  multi_processing_download.py
tests/: test_download_manager.py
