[build-system]
requires = ["setuptools>=61.0,<72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merradownload"
version = "1.0.1"
description = "Download and process MERRA-2 meteorological data from NASA GES DISC"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Jan Urbansky" }]
keywords = ["merra", "nasa", "climate", "meteorology", "download", "opendap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "tqdm>=4.60.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
]

[project.scripts]
merradownload = "opendap_download.cli:main"

[project.urls]
Homepage = "https://github.com/Anemona-io/merradownload"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
